# kitten_tts_rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-test.yml  release.yml
src/: lib.rs  main.rs  model.rs  phonemize.rs  preprocess.rs  voices.rs
